<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="10sp"
        android:text="@string/textAppName"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appImage"
        app:layout_constraintEnd_toStartOf="@+id/Lock"
        app:layout_constraintStart_toEndOf="@+id/appImage"
        app:layout_constraintTop_toTopOf="@+id/appImage" />

    <CheckBox
        android:id="@+id/Lock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/lock"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/AppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AppName"
        app:layout_constraintTop_toTopOf="@+id/appImage" />

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toStartOf="@+id/AppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>